--- a/spring-la-mia-pizzeria-crud/pom.xml
+++ b/spring-la-mia-pizzeria-crud/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+    	<dependency>
+    		<groupId>org.webjars</groupId>
+    		<artifactId>font-awesome</artifactId>
+    		<version>6.4.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
